# telegram_claude_bot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  Settings_Notion_MCP.md  controltower.spec  docker-compose.yml  pyproject.toml
.claude/agents/: orchestrator-agent.md  telegram-agent.md
.claude/agents/project/: architect.md  code-reviewer.md  debugger.md  docker-captain.md  install-dev.md  integration-agent.md  orchestrator-dev.md  orchestrator.md  python-pro.md  researcher.md  security-auditor.md  shared-dev.md  telegram-dev.md  tester.md
.claude/skills/domain-database/: SKILL.md
.claude/skills/foundation-claude/: SKILL.md
.claude/skills/foundation-core/: SKILL.md
.claude/skills/lang-python/: SKILL.md
.claude/skills/platform-deployment/: SKILL.md
.claude/skills/workflow-tdd/: SKILL.md
.claude/skills/workflow-testing/: SKILL.md
.claude/skills/workflows/: auto.md  fix.md  plan.md  run.md
.serena/: project.yml
agent/: README.md  commands_with_dev.py  prompts.py
deploy/docker/: Dockerfile  Linux_Claude_Auth.md  README.md  docker-compose.yml  entrypoint.sh
deploy/windows/: .env.example  README.md  controltower.spec  install.bat  install_service.bat  install_service.ps1  remove_service.bat  remove_service.ps1  telegram_claude_bot.spec
docs/: README.md
docs/agentTeams/: monitoring.md
scripts/: find_process.py  install_service.ps1  launch_program.py  screenshot.py
src/: main.py
src/agent/: __init__.py  workflow.py
src/orchestrator/: manager.py  process.py  queue.py
src/shared/: ai_session.py  chat_history.py  claude_session.py  config.py  database.py  events.py  models.py  named_sessions.py
src/telegram/: bot.py  keyboards.py
src/telegram/handlers/: callbacks.py  (+1 more)
(+207 files in other folders)
